--- a/css.css
+++ b/css.css
@@ -3,6 +3,7 @@
 }
 
 body {
+  padding-top: 20px;
   width: 42%;
   margin: 0 auto;
   background: white;
@@ -12,9 +13,8 @@ body {
 
 .middle {
   margin: 0 auto;
-  width: 96%;
-  float: left;
-  height: 1030px;
+  width: 600px;
+  height: 800px;
   padding: 2%;
   background-color: #ededed;
   /* border: solid 1px #000; */
@@ -26,55 +26,79 @@ body {
   max-width: 180px;
   height: auto;
   float: right;
-  padding:20px;
+  padding-right: 20px;
 }
 
 .text{
-  margin-top: 0;
-  box-sizing: border-box;
-  float: left;
+  font-size: 82%;
+  margin: 0 auto;
   text-align: left;
   max-width: 180px;
   margin-bottom: 0px;
 }
 
 .textbox:nth-child(3n +1) {
-  padding-top: 0;
+  padding-top: 20px;
   clear: right;
 }
 
 .OhContainer {
   margin: auto;
+  padding-top: -20px;
   /* left: 50% - hälften av din bredd */
 }
 
 h2  {
-  font-size: 1000%;
+  font-size: 900%;
   text-align: center;
   margin: 0;
   padding: 20px;
 }
 
 #One {
-  max-width: 1114.730px;
-  color: rgba(255,0,0,0.7);
-  background-color: rgba(0,60,255,0.7);
+  margin-top: -20px;
+  color: rgba(255,10,10,0.7);
+  /* background-color: rgba(0,0,255,0.7); */
+  /* background-color: rgba(0,60,255,0.7); */
 }
 
 #Two {
 
-margin-top: -235px;
-color: rgba(0,0,255,0.55);
-background-color: rgba(210,255,0,0.7);
-margin-bottom: 40px;
+margin-top: -214.5px;
+color: rgba(0,0,255,0.5);
+/* background-color: rgba(255,0,0,0.7); */
+/* background-color: rgba(210,255,0,0.7); */
+margin-bottom: 20px;
 }
 
 #blacksabbath {
-  padding-top: 20px;
-  padding-left: 20px;
-  font-size: 150%;
+  max-width: 160px;
+  padding: 0 20px;
+  font-size: 130%;
 }
 
+/* .circles > .circle {
+  background-color: rgba(0,0,255,0.5);
+  border-radius: 50%;
+  width:50px;
+  height: 50px;
+  display: inline-block;
+  margin-top: 220px;
+  margin-left: -25px;
+}
+
+.circles > .circle:nth-child(1) {
+    margin-left: 20px;
+}
+
+.circles > .circle:nth-child(2n +0) {
+    background-color: rgba(255,0,0,0.5);
+}
+
+.circles > .circle:nth-child(1n +6) {
+  margin-top: -50px;
+  margin-left: -25px;
+} */
 
 /* .left {
   box-sizing: border-box;
